[package]
name = "cargo-3ds"
version = "0.1.2"
authors = ["Rust3DS Org", "Andrea Ciliberti <meziu210@icloud.com>"]
description = "Cargo wrapper for developing Nintendo 3DS homebrew apps"
repository = "https://github.com/rust3ds/cargo-3ds"
keywords = ["3ds", "homebrew"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
exclude = [".github"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
cargo_metadata = "0.14.0"
rustc_version = "0.4.0"
semver = "1.0.10"
serde = { version = "1.0.139", features = ["derive"] }
tee = "0.1.0"
toml = "0.5.6"
clap = { version = "4.0.15", features = ["derive", "wrap_help"] }
shlex = "1.3.0"
serde_json = "1.0.108"
